# finance

./: .gitignore  2023_amerant.csv  2024.csv  2024_amerant.csv  2024_amerant_descripcion.csv  2024_descripcion.csv  2024_ene.csv  2025_Ene.csv  2025_amerant.csv  2025_carolay.csv  2025_ene2.csv  2025_ene_feb.csv  2025_semI_oct_dic.csv  index.html  resumenpormes.csv
data/: transactions.json
finance-backend/: README.md  pyproject.toml  requirements.txt
finance-backend/app/: main.py
finance-backend/app/api/routes/: balances.py  exchange.py  finance.py
finance-backend/app/core/: app.py  config.py  database.py  extract.py  processing.py  utils.py
finance-backend/app/models/: schemes.py
finance-backend/app/notebook/: 2024_ene.csv  2025_semI_oct_dic.csv  test.ipynb
finance-backend/app/notebook/.ipynb_checkpoints/: test-checkpoint.ipynb
finance-ui/: index.html  package-lock.json  package.json
finance-ui/src/: main.js
finance-ui/src/router/: index.js
finance-ui/src/ui/: App.vue  app.py
finance-ui/src/ui/components/: Balance.vue  BalanceByEntity.vue  BalanceTimeLine.vue  CategoryChart.vue  Content.vue  CurrencyToggle.vue  EmptyState.vue  ExchangeRateCard.vue  Header.vue  Sidebar.vue  Summary.vue
finance-ui/src/ui/components/charts/: BarChart.vue  DoughnutChart.vue  LineChart.vue
finance-ui/src/ui/views/: Dashboard.vue
old/: 2024.csv  869-000307-99_336.csv  869-000307-99_474.csv  869-000307-99_488.csv
