[tool.poetry]
name = "finance-backend"
version = "0.1.0"
description = "personal finances control"
authors = ["alexandralacruz <alexandra.lacruz@gmail.com>"]
readme = "README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.3.3"
matplotlib = "^3.10.8"
openpyxl = "^3.1.5"
uvicorn = "^0.40.0"
fastapi = "^0.128.0"
yfinance = "^1.0"
xlrd = "^2.0.2"
logger = "^1.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.5.1"
notebook = "^7.5.1"
pytest = "^9.0.2"
jupyter-client = "^8.8.0"
jupyter-core = "^5.9.1"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
